Fix: Add top spacing to 'Let's Build Something Together' section on About page

--- a/css/about-enhanced.css
+++ b/css/about-enhanced.css
@@ -1069,6 +1069,8 @@
 
 .about-cta {
     margin-bottom: 4rem;
+    margin-top: 6rem;
+    padding-top: 3rem;
     text-align: center;
 }
 
